[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/camera_handler.gd" type="Script" id=1]
[ext_resource path="res://scripts/editable_map.gd" type="Script" id=2]
[ext_resource path="res://tileset/game_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://fonts/Josefin - 20.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/Josefin - 10.tres" type="DynamicFont" id=5]
[ext_resource path="res://import/JosefinSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=3]
resource_name = "display"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 825, -200 ), Vector2( 825, 0 ), Vector2( 825, 0 ), Vector2( 825, -200 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.219608, 0.662745, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="TileMap" type="TileMap"]
tile_set = ExtResource( 3 )
format = 1
script = ExtResource( 2 )

[node name="FocusingCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="tile_display" type="Control" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = -200.0
margin_right = 135.0
rect_min_size = Vector2( 270, 200 )

[node name="ColorRect" type="ColorRect" parent="UI/tile_display"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.560784 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/tile_display"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 12.0
margin_right = 135.0
margin_bottom = 44.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center] CURRENT CELL"
text = " CURRENT CELL"
fit_content_height = true
scroll_active = false

[node name="current_tile" type="TextureRect" parent="UI/tile_display"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -44.0
margin_right = 60.0
margin_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 64, 64 )
rect_clip_content = true
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/tile_display"]
anims/display = SubResource( 3 )

[node name="tutorial_layer" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="UI/tutorial_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.337255 )

[node name="tutorial_win" type="Control" parent="UI/tutorial_layer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 500 )

[node name="ColorRect" type="ColorRect" parent="UI/tutorial_layer/tutorial_win"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.6 )

[node name="keys" type="RichTextLabel" parent="UI/tutorial_layer/tutorial_win"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -390.0
margin_right = 250.0
margin_bottom = -38.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]PLACE: LMB

DELETE: RMB

CHANGE TILE: TAB

TOGGLE GRID: SHIFT

SAVE: S

LOAD: L"
text = "PLACE: LMB

DELETE: RMB

CHANGE TILE: TAB

TOGGLE GRID: SHIFT

SAVE: S

LOAD: L"
fit_content_height = true
scroll_active = false

[node name="title" type="RichTextLabel" parent="UI/tutorial_layer/tutorial_win"]
modulate = Color( 0.611765, 0.909804, 1, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -127.5
margin_top = 41.0
margin_right = 127.5
margin_bottom = 97.0
rect_min_size = Vector2( 255, 56 )
custom_fonts/normal_font = ExtResource( 4 )
text = "TUTORIAL"

[node name="understood_button" type="Button" parent="UI/tutorial_layer/tutorial_win"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.5
margin_top = -69.0
margin_right = 59.5
margin_bottom = -32.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "GOT IT!"

[node name="FileDialog" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 500 )
window_title = "Save Level"
access = 1
filters = PoolStringArray( "*.dat" )

[connection signal="pressed" from="UI/tutorial_layer/tutorial_win/understood_button" to="." method="_on_understood_button_pressed"]
[connection signal="file_selected" from="UI/FileDialog" to="." method="save"]
